# CSC-675-AI-Capstone

./: README.md  docker-compose.yml  example.ipynb
app/: .gitignore  package-lock.json  package.json
app/app/(app)/: _layout.tsx
app/app/(app)/(tabs)/: _layout.tsx  explore.tsx  index.tsx  settings.tsx
app/app/(app)/(tabs)/chats/: [param].tsx  _layout.tsx
app/app/(app)/chats/: [param].tsx  _layout.tsx
app/app/_components/: Chat.tsx  Chatbox.tsx  Content.tsx  TabHeader.tsx  index.ts
app/app/_context/: ChathistContext.tsx
app/app/_headers/: BlurredHeader.tsx
chathist/: .dockerignore  .dvcignore  .gitignore  Makefile  README.md  chathist.dockerfile  models.dvc  pyproject.toml  requirements.txt
chathist/.dvc/: config
chathist/chathist/: __init__.py  config.py  custom_exception.py  gpt_modules.py  instruction_styling.py  model.py  processing.py  tokenizer.py
chathist/chathist/conf/: config.yaml
chathist/chathist/conf/experiments/: exp1.yaml
chathist/chathist/conf/train/: chat_title.yaml  history.yaml
chathist/dockerfiles/: chat_history.dockerfile  chat_title.dockerfile
chathist/notebooks/chathist/chathist_examples/: dataset.ipynb  gpt2.ipynb  instruction_styling.ipynb  tokenizer.ipynb
chathist/notebooks/chathist/inference/: chat_title_inference.ipynb  history_inference.ipynb
chathist/notebooks/chathist/train/: chat_title.ipynb  history.ipynb
chathist/notebooks/chathist_examples/: dataset.ipynb  gpt2.ipynb  instruction_styling.ipynb  tokenizer.ipynb
chathist/notebooks/inference/: chat_title_inference.ipynb  combine_inference.ipynb  history_inference.ipynb
chathist/notebooks/train/: chat_title.ipynb
chathist/requirements/: requirements-dev.txt  requirements.txt
chathist/server/: chat_history.py  chat_title.py  main.py
llm/: gpt2_model.py  processing.py
notebooks/: example.ipynb
notebooks/chathist_examples/: dataset.ipynb  gpt2.ipynb  instruction_styling.ipynb  tokenizer.ipynb
sculpgen/: .dvcignore  .gitignore  Makefile  data.dvc  pyproject.toml
sculpgen/.dvc/: config
sculpgen/notebooks/: data_files.ipynb  download_from_hf.ipynb  example.ipynb  nst.ipynb  rename_files.ipynb
sculpgen/requirements/: requirements.txt  requirements_dev.txt
sculpgen/sculpgen/: __init__.py  logger.py  model.py  nst_model.py  ryaml.py  vgg_model.py
sculpgen/sculpgen/data/: __init__.py
sculpgen/server/: main.py
sculpgen/yaml/: data.yaml  rename.yaml  train_nst.yaml
server/: .gitignore  app.js  package-lock.json  package.json  server.dockerfile  server.js
server/controllers/: chathistController.js
server/models/: ConversationModel.js  chatModel.js
server/routers/: chathistRouter.js
server/utils/: createStreamer.js
